Update title on index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Representation Learning on Graphs and Manifolds
+title: Graph Representation Learning
 ---
 
 <div class="main-post-list">
